hw04/.deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-service
  template:
    metadata:
      labels:
        app: otus-service
    spec:
      containers:
      - name: otus-service
        image: katyas3357536/otus-app:0.0.2
        ports:
        - containerPort: 8020
        livenessProbe:
          httpGet:
            path: /health/
            port: 8020
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health/
            port: 8020
          initialDelaySeconds: 3
          periodSeconds: 5
