hw04/.deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-service-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otus-service
            port:
              number: 80
